--- a/documents.html
+++ b/documents.html
@@ -33,6 +33,15 @@
                     </li>
                 </ul>
             </section>
+            <section>
+                <h1 class="section-title">SPMP</h1>
+                <p>De meest verschillende versies van de Software Project Management Plan staan hier te vinden.</p>
+                <ul class="download-list">
+                    <li>
+                        <a href="doc/spmp.pdf" target="_blank">Eerste Versie</a>
+                    </li>
+                </ul>
+            </section>
         </div>
         <footer>
             <div class="address">
