updates minutes + requirement dashboard

--- a/documents.html
+++ b/documents.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Progress</a></li>
+                    <li><a href="progress.html">Progress</a></li>
                     <li><a class="current-menu-item" href="#">Documents</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
@@ -31,11 +31,14 @@
                     <li>
                         <a href="doc/meeting-29-10-14.pdf" target="_blank">29 oktober 2014</a>
                     </li>
+                    <li>
+                        <a href="doc/meeting-07-11-14.pdf" target="_blank">07 november 2014</a>
+                    </li>
                 </ul>
             </section>
             <section>
                 <h1 class="section-title">SPMP</h1>
-                <p>De meest verschillende versies van de Software Project Management Plan staan hier te vinden.</p>
+                <p>De verschillende versies van de Software Project Management Plan staan hier te vinden.</p>
                 <ul class="download-list">
                     <li>
                         <a href="doc/spmp.pdf" target="_blank">Eerste Versie</a>
