--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Progress</a></li>
+                    <li><a href="progress.html">Progress</a></li>
                     <li><a href="documents.html">Documents</a></li>
                     <li><a class="current-menu-item" href="#">About</a></li>
                 </ul>
