--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul class="menu">
                     <li><a class="current-menu-item" href="#">Home</a></li>
-                    <li><a href="#">Progress</a></li>
+                    <li><a href="progress.html">Progress</a></li>
                     <li><a href="documents.html">Documents</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
