--- a/documents.html
+++ b/documents.html
@@ -15,6 +15,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="progress.html">Progress</a></li>
                     <li><a class="current-menu-item" href="#">Documents</a></li>
+                    <li><a href="api.html">API</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -34,14 +35,17 @@
                     <li>
                         <a href="doc/meeting-07-11-14.pdf" target="_blank">07 november 2014</a>
                     </li>
+                    <li>
+                        <a href="doc/meeting-13-11-14.pdf" target="_blank">13 november 2014</a>
+                    </li>
                 </ul>
             </section>
             <section>
-                <h1 class="section-title">SPMP</h1>
+                <h1 class="section-title">Documenten</h1>
                 <p>De verschillende versies van de Software Project Management Plan staan hier te vinden.</p>
                 <ul class="download-list">
                     <li>
-                        <a href="doc/spmp.pdf" target="_blank">Eerste Versie</a>
+                        <a href="doc/spmp.pdf" target="_blank">SPMP - Eerste Versie</a>
                     </li>
                 </ul>
             </section>
