--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <li><a class="current-menu-item" href="#">Home</a></li>
                     <li><a href="progress.html">Progress</a></li>
                     <li><a href="documents.html">Documents</a></li>
+                    <li><a href="api.html">API</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
