--- a/progress.html
+++ b/progress.html
@@ -16,6 +16,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a class="current-menu-item" href="#">Progress</a></li>
                     <li><a href="documents.html">Documents</a></li>
+                    <li><a href="api.html">API</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
