--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="progress.html">Progress</a></li>
                     <li><a href="documents.html">Documents</a></li>
+                    <li><a href="api.html">API</a></li>
                     <li><a class="current-menu-item" href="#">About</a></li>
                 </ul>
             </nav>
