New API Version Added link to demo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <p>Look for papers from researchers all around the world</p>
             </div>
         </header>
+        <section>
+            <h1>See a live demo of our project !</h1>
+            <a class="demo-link" href="http://wilma.vub.ac.be:8080" target="_blank">Demo</a>
+        </section>
         <footer>
             <div class="address">
                 <h3 class="logo-name">WiseLib</h3>
