--- a/documents.html
+++ b/documents.html
@@ -30,22 +30,76 @@
                 <p>De verslagen van onze verschillende vergaderingen zijn hier te vinden.</p>
                 <ul class="download-list">
                     <li>
-                        <a href="doc/meeting-29-10-14.pdf" target="_blank">29 oktober 2014</a>
+                        <a href="doc/meetings/meeting-29-10-14.pdf" target="_blank">29 oktober 2014</a>
                     </li>
                     <li>
-                        <a href="doc/meeting-07-11-14.pdf" target="_blank">07 november 2014</a>
+                        <a href="doc/meetings/meeting-07-11-14.pdf" target="_blank">07 november 2014</a>
                     </li>
                     <li>
-                        <a href="doc/meeting-13-11-14.pdf" target="_blank">13 november 2014</a>
+                        <a href="doc/meetings/meeting-13-11-14.pdf" target="_blank">13 november 2014</a>
+                    </li>
+                    <li>
+                        <a href="doc/meetings/meeting-21-11-14.pdf" target="_blank">21 november 2014</a>
+                    </li>
+                    <li>
+                        <a href="doc/meetings/meeting-10-12-14.pdf" target="_blank">10 december 2014</a>
+                    </li>
+                    <li>
+                        <a href="doc/meetings/meeting-09-02-15.pdf" target="_blank">09 february 2015</a>
+                    </li>
+                    <li>
+                        <a href="doc/meetings/meeting-10-02-15.pdf" target="_blank">10 february 2015</a>
+                    </li>
+                    <li>
+                        <a href="doc/meetings/meeting-18-02-15.pdf" target="_blank">18 february 2015</a>
+                    </li>
+                    <li>
+                        <a href="doc/meetings/meeting-25-02-15.pdf" target="_blank">25 february 2015</a>
                     </li>
                 </ul>
             </section>
             <section>
                 <h1 class="section-title">Documenten</h1>
-                <p>De verschillende versies van de Software Project Management Plan staan hier te vinden.</p>
+                <p>De verschillende versies van de documenten staan hier te vinden.</p>
                 <ul class="download-list">
                     <li>
-                        <a href="doc/spmp.pdf" target="_blank">SPMP - Eerste Versie</a>
+                        <a href="doc/spmp.pdf" target="_blank">SPMP - 0.1</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter1-draft/SPMP.pdf" target="_blank">SPMP - 1.0</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter1/SPMP.pdf" target="_blank">SPMP - 1.1</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter2/SPMP.pdf" target="_blank">SPMP - 2.0</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter1-draft/SDD.pdf" target="_blank">SDD - 1.0</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter1/SDD.pdf" target="_blank">SDD - 1.1</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter2/SDD.pdf" target="_blank">SDD - 2.0</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter1-draft/SRS.pdf" target="_blank">SRS - 1.0</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter1/SRS.pdf" target="_blank">SRS - 1.1</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter2/SRS.pdf" target="_blank">SRS - 2.0</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter1-draft/STD.pdf" target="_blank">STD - 1.0</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter1/STD.pdf" target="_blank">STD - 1.1</a>
+                    </li>
+                    <li>
+                        <a href="doc/iter2/STD.pdf" target="_blank">STD - 2.0</a>
                     </li>
                 </ul>
             </section>
